Batch codes for the final project

--- a/HTML/(3_Pages)/3.html
+++ b/HTML/(3_Pages)/3.html
@@ -3,11 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="act3.css">
-    <title>Page 1</title>
+    <title>Page 3</title>
 </head>
-<body style="background-color: #ff6961;">
+<body style="background-color: #ffee8c;">
     <div class="divcont">
-        <div class="Header"><h1>You are in Page 1</h1></div>
+        <div class="Header"><h1>You are in Page 3</h1></div>
         <div class="content">
             <a href="1.html" target="1.html"><button>To 1st Page</button></a>
             <a href="2.html" target="2.html"><button>To 2nd Page</button></a>
