--- a/HTML/(calendar)/calendar.html
+++ b/HTML/(calendar)/calendar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="calendar.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>2026</h1>
@@ -805,7 +805,7 @@
         </table>
     </div>
 </div>
-<script src="calendar.js"></script>
+<script src="abrigo.js"></script>
 <!--#codingexperiencebeginnerlevel-->
 <!--Sorry po sir late Nahirapan po ako sa mga functions :()-->
 </body>
