--- a/HTML/FinalProject/home.html
+++ b/HTML/FinalProject/home.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
+    <link rel="icon" type="jpg" href="3g.jpg">
     <title>Fav.3G</title>
 </head>
 <body>
@@ -11,8 +12,8 @@
         <div class="title2">SELECT A GAME</div>
         <div class="gamecont">
             <a href=""><div class="game" style="background-image: url(memory_game_logo.png );"> </div></a>
-            <a href=""><div class="game" style="background-image: url(tictactoe_logo.png) ;"></div></a>
-            <a href=""><div class="game" style="background-image: url(rockpaperscissors_logo.png) ;"></div></a>     
+            <a href="tictactoe.html"><div class="game" style="background-image: url(tictactoe_logo.png) ;"></div></a>
+            <a href="rps.html"><div class="game" style="background-image: url(rockpaperscissors_logo.png) ;"></div></a>     
         </div>  
     </div>
 </body>
