--- a/HTML/FinalProject/mg.html
+++ b/HTML/FinalProject/mg.html
@@ -10,6 +10,10 @@
 <body>
     <h1>Memory Game</h1>
     <div class="gamecont">
+        <div class="score-container">
+            <div class="score">Flips: <span id="flip-count">0</span></div>
+            <div class="timer">Time: <span id="minutes">00</span>:<span id="seconds">00</span></div>
+        </div>
         <div class="memory-game">
         </div>
     </div>
